Fix for slideshow jump on PDP

--- a/instaparent/style.css
+++ b/instaparent/style.css
@@ -970,15 +970,15 @@ filter:progid:DXImageTransform.Microsoft.dropshadow(OffX=0,OffY=0,Color=#1a00000
 /* = Property Detail Page 
 **********************************/
 .detail-overview-target .bapi-rateblock{min-height:421px;}
-.page-template-property-detail #slider { position: relative; cursor:pointer; max-height: 650px; width: 100%; padding-bottom: 66.5%; }
-.page-template-property-detail #slider .flex-viewport { position: absolute !important; top: 0; left: 0; width: 100%; }
+/*.page-template-property-detail #slider { position: relative; cursor:pointer; max-height: 650px; width: 100%; padding-bottom: 66.5%; }
+.page-template-property-detail #slider .flex-viewport { position: absolute !important; top: 0; left: 0; width: 100%; }*/
 .property-detail ul li span{color:gray;}
 
 /* flexslider */
 .property-detail-page .item-slideshow .flex-caption{bottom:0;position:absolute;width:100%;z-index:9;}
 .property-detail-page .flex-viewport,.property-detail-page .flexslider .slides > li{max-height:700px;}
-.slideholder { opacity: 0; }
-.flexslider.active + .slideholder { display: none; }
+.slideholder { opacity: 0; transition: all 1s; }
+.flexslider.active + .slideholder { opacity:0; display: none; }
 
 /* Attractions tab */
 .property-detail-page #map-side-bar{margin-top:20px;}
